--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -7,11 +7,10 @@
   border: 1px solid rgb(75, 75, 75);
   border-radius: 10px;
   box-shadow: 1px 1px 1px rgb(89, 89, 89);
-  flex: 2 1 280px;
-  max-height: 500px;
-  min-height: 400px;
+  flex: 1 1 280px;
+  height: 430px;
   padding: 10px;
-  width: 270px;
+  width: 260px;
 }
 
 .normal {
@@ -30,16 +29,14 @@
   border-radius: 5px;
   display: grid;
   gap: 5px;
-  grid-template: 5% 55% 15% 10% 10% 5%;
-  grid-template-areas: 'title title'
-    'img img'
-    'descri descri'
-    'power power'
-    'force life'
-    'rare rare';
+  grid-template: 'title title' 6%
+    'img img' 50%
+    'descri descri' 13%
+    'power power' 10%
+    'force life' 10%
+    'rare rare' 5%;
   grid-template-columns: 1fr 1fr;
-  max-height: 400px;
-  min-height: 400px;
+  height: 400px;
   padding: 2px;
   width: 100%;
 }
@@ -63,6 +60,7 @@
   grid-area: title;
   text-align: center;
   width: 100%;
+  padding: 2px;
 }
 
 .description-card {
